--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,20 +36,22 @@ jobs:
     - name: File Actions
       run: |
         cp -r lib symbol-extract
-        gsutil cp gs://stocks-sandbox.appspot.com/keyfiles/stocks-sandbox-keyfile.json keyfile.json
-        
-    - name: Setup gcloud environment
-      uses: GoogleCloudPlatform/github-actions@0.1.2
+    
+    - name: Gcloud setup
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
-        version: 275.0.0
-        service_account_key: keyfile.json
+        version: '285.0.0'
+        project_id: stocks-sandbox
+        service_account_email: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        export_default_credentials: true
     
     - name: set environment variables
       uses: allenevans/set-env@v1.0.0
       with:
-        GOOGLE_APPLICATION_CREDENTIALS: keyfile.json
+        TF_VAR_finnhub_key: ${{ secrets.FINNHUB_API_KEY }}
     
-    - name: Run Terraform
-      run: |
-        terraform init -input=false
-        terraform apply -auto-approve -input=false
+    # - name: Run Terraform
+    #   run: |
+    #     terraform init -input=false
+    #     terraform apply -auto-approve -input=false
