--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,13 @@ jobs:
       with:
         TF_VAR_finnhub_key: ${{ secrets.FINNHUB_API_KEY }}
 
-    - name: Install/Run Terraform
+    - name: Install Terraform
       uses: little-core-labs/install-terraform@v1.0.0
       with:
         # Version of terraform to download
         version: 0.12.21
+
+    - name: Install Applications
       run: |
         terraform init -input=false
         terraform apply -auto-approve -input=false
