updating terraform execution

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,6 @@ jobs:
 
     - name: Install Applications
       run: |
+        cd symbol-extract
         terraform init -input=false
         terraform apply -auto-approve -input=false
