--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,12 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: File Actions
+    - name: Packaging Code
       run: |
         cp -r lib symbol-extract
+        zip -r symbol-extract/code.zip symbol-extract 
     
-    - name: Gcloud setup
+    - name: Gcloud Setup
       uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         version: '285.0.0'
@@ -40,7 +41,7 @@ jobs:
         service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         export_default_credentials: true
     
-    - name: set environment variables
+    - name: Set Environment Variables
       uses: allenevans/set-env@v1.0.0
       with:
         TF_VAR_finnhub_key: ${{ secrets.FINNHUB_API_KEY }}
@@ -51,7 +52,7 @@ jobs:
         # Version of terraform to download
         version: 0.12.21
 
-    - name: Install Applications
+    - name: Run Terraform
       run: |
         cd symbol-extract
         terraform init -input=false
