--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,5 +57,5 @@ jobs:
       run: |
         cd symbol-extract
         terraform init -input=false
-        terraform destroy -input=false
+        terraform destroy -auto-approve
         # terraform apply -auto-approve -input=false
