--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Set Environment Variables
       uses: allenevans/set-env@v1.0.0
       with:
-        TF_VAR_finnhub_key: ${{ secrets.FINNHUB_API_KEY }}
+        TF_VAR_FINNHUB_KEY: ${{ secrets.FINNHUB_API_KEY }}
 
     - name: Install Terraform
       uses: little-core-labs/install-terraform@v1.0.0
@@ -55,6 +55,5 @@ jobs:
 
     - name: Run Terraform
       run: |
-        echo ${TF_VAR_finnhub_key}
-        # terraform init -input=false
-        # terraform apply -auto-approve -input=false -var-file="sandbox.tfvars"
+        terraform init -input=false
+        terraform apply -auto-approve -input=false -var-file="sandbox.tfvars"
